@@ -8,6 +8,9 @@
 # * date Author's Name <author's email> version-release
 # - Summary of changes
 
+* Thu Nov 26 2020 Matthias Fehring <> 0.7.1-1
+- fixed: update to current libfuoten to handle changes in News App API (#63)
+
 * Sat Oct 17 2020 Matthias Fehring <> 0.7.0-1
 - info: seventh preview release
 - new: implement remote wipe (#61)
