@@ -1,6 +1,6 @@
 # 
 # Do NOT Edit the Auto-generated Part!
-# Generated by: spectacle version 0.27
+# Generated by: spectacle version 0.32
 # 
 
 Name:       harbour-fuoten
@@ -15,7 +15,7 @@ Name:       harbour-fuoten
 %{!?qtc_make:%define qtc_make make}
 %{?qtc_builddir:%define _builddir %qtc_builddir}
 Summary:    ownCloud/Nextcloud News App Client
-Version:    0.7.0
+Version:    0.7.1
 Release:    1
 Group:      Applications/Internet
 License:    GPL-3.0
